# DeepSC

./: .gitignore  README.md  dataset.py  main.py  performance.py  preprocess_text.py  pyproject.toml  requirements.txt  student.py  teacher.py  test.ipynb  train_multi_students.py  train_student.py  train_tr_kd.py  utils.py
models/: rx_model.py  transceiver.py  tx_model.py
